# Nft-Marker-Creator-App

./: .dockerignore  .gitattributes  .gitignore  .npmignore  .prettierignore  .prettierrc  CMakeLists.txt  Dockerfile  NFTMarkerCreator.test.js  README.md  jest.config.js  package-lock.json  package.json  pyproject.toml
.github/workflow/: build.yml
.github/workflows/: CI.yml  build-docker-latest.yml  build-docker-tags.yml  build-docker.yml  build.yml  python-wheels.yml
demo/: demoServer.js  nft.html
docker/: BUILD-INFOS.md
docker/scripts/docker/: entrypoint.sh
emscripten/: markerCompress.cpp  markerCompress.h  markerCreator.c  markerCreator.cpp  markerCreator_bindings.cpp  threaded_featureMap.cpp
python/: CMakeLists.txt  DESIGN.md  DESIGN_windows_pypi.md  README.md  pyproject.toml
python/nft_marker_creator/: __init__.py  __main__.py  cli.py
python/src/: markerCreator_py.cpp
src/: NFTCreator.js  NFTMarkerCreator.js
src/cli/: parseArgs.js
test/: NFTMarkerCreator.test.js  parseArgs.test.js
tools/: makem.js
