[build-system]
requires = ["scikit-build-core>=0.8", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "nft-marker-creator"
version = "0.1.0"
description = "Native NFT marker creator (WebARKitLib) via pybind11"
readme = "python/README.md"
requires-python = ">=3.8"
license = { text = "LGPL-3.0" }
dependencies = ["pillow"]

[project.scripts]
nft-marker-creator = "nft_marker_creator.cli:main"

[tool.scikit-build]
wheel.packages = ["python/nft_marker_creator"]
minimum-version = "0.8"
cmake.version = ">=3.18"

[tool.cibuildwheel]
# manylinux glibc + Windows AMD64 wheels for CPython 3.8-3.13. macOS is a
# tracked follow-up (can't be validated locally without a Mac).
build = "cp38-* cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "*-musllinux*"
build-verbosity = 1
# Smoke-test each built wheel: the extension loads (bundled libjpeg/zlib resolve)
# and the CLI entry point is present.
test-command = "python -c \"import nft_marker_creator, nft_marker_creator._core; print('import OK')\" && nft-marker-creator --help"

[tool.cibuildwheel.linux]
archs = ["x86_64"]
manylinux-x86_64-image = "manylinux_2_28"
# clang is required (GCC crashes at runtime; see python/DESIGN.md); plus libjpeg/zlib.
before-all = "dnf install -y clang libjpeg-turbo-devel zlib-devel"
environment = { CC = "clang", CXX = "clang++" }

[tool.cibuildwheel.windows]
# Plain MSVC (no clang needed on Windows). zlib + libjpeg-turbo are fetched and
# statically linked by CMake, so the .pyd is self-contained and needs no
# delvewheel repair. See python/DESIGN_windows_pypi.md.
archs = ["AMD64"]

# Keep the sdist small and buildable: exclude the Node app, demo, WASM build
# artifacts, tests, and the big vendored submodules (WebARKitLib is fetched via
# FetchContent at build time; native uses system zlib). Only markerCreator.cpp
# from emscripten/ is needed alongside python/ + CMakeLists.
[tool.scikit-build.sdist]
# Anchored (/-prefixed) so patterns match only at the repo root and don't catch
# python/src (which holds the pybind11 binding). WebARKitLib is fetched at build
# time (FetchContent), so it's excluded to keep the sdist small.
exclude = [
  "/src", "/demo", "/docker", "/test", "/tools", "/build", "/node_modules",
  "/.github", "/emscripten/WebARKitLib", "/emscripten/zlib", "/emscripten/build",
  "/emscripten/.idea", "/emscripten/markerCreator_bindings.cpp",
  "/README.md", "/package.json", "/package-lock.json", "/jest.config.js",
  "/Dockerfile", "/.dockerignore", "/.npmignore", "/.nvmrc", "/.prettierrc",
  "/.prettierignore", "/.gitattributes", "/.gitignore", "/.gitmodules",
  "*.png", "*.jpg", "*.jpeg", "*.glb", "*.dat",
]
